--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -7,31 +7,7 @@
     android:orientation="vertical"
     tools:context=".HalamanMenu">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_awal"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@drawable/foodbanner1"
-            app:popupTheme="@style/AppTheme">
-
-            <TextView
-                android:id="@+id/pengguna"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="135dp"
-                android:text="MENU"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-        </androidx.appcompat.widget.Toolbar>
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+    <include layout="@layout/halaman_menu"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
