--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_awal"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/foodbanner1"
+        app:popupTheme="@style/AppTheme">
+
+
+    </androidx.appcompat.widget.Toolbar>
     <TextView
+        android:id="@+id/awal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Home Fragment"
+        android:text="Selamat Datang"
         android:textSize="30sp"
         android:gravity="center"
         android:layout_centerInParent="true"/>
+    <TextView
+        android:id="@+id/dua"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="di"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:layout_below="@+id/awal"/>
+    <TextView
+        android:id="@+id/tiga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reservasi Restoran"
+        android:textStyle="bold"
+        android:textSize="35sp"
+        android:gravity="center"
+        android:layout_below="@+id/dua"/>
 
 </RelativeLayout>
