--- a/app/src/main/res/layout/fragment_reservasi.xml
+++ b/app/src/main/res/layout/fragment_reservasi.xml
@@ -1,16 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.ReservasiFragment">
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reservasi Fragment"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="408dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="Reservasi "
+            android:textAlignment="center"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/edtNama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:hint="Masukkan Nama Pemesan"
+            android:inputType="textPersonName"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        <EditText
+            android:id="@+id/edtNoHp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:hint="Masukkan No Hp"
+            android:inputType="textPhonetic"
+            app:layout_constraintTop_toBottomOf="@+id/edtNama"/>
+
+        <EditText
+            android:id="@+id/edtTgl"
+            android:layout_width="245dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:textSize="18sp"
+            android:hint="Masukkan Tanggal Pemesanan"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtNoHp" />
+
+        <Button
+            android:id="@+id/btnedttgl"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="Change Date"
+            android:background="@color/kuningprimary"
+            android:layout_marginTop="14dp"
+            app:layout_constraintStart_toEndOf="@id/edtTgl"
+            app:layout_constraintTop_toBottomOf="@id/edtNoHp"/>
+
+        <EditText
+            android:id="@+id/edtMeja"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:hint="Masukkan Jumlah Meja"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtTgl"/>
+
+        <Button
+            android:id="@+id/btnReservasi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="Kirim "
+            android:background="@android:color/holo_green_dark"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtMeja"/>
+    </LinearLayout>
 
 </RelativeLayout>
