--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,21 +7,15 @@
     <ImageView
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/background_home"
+        android:src="@drawable/ic_user"
         android:layout_marginTop="20dp"/>
     <TextView
         android:id="@+id/namaUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Anonimus"
+        android:text="Text"
         android:textStyle="bold"
         android:textSize="20sp"
         android:textColor="@android:color/white"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3 TIA "
-        android:textColor="@android:color/white"
-        android:textSize="18sp"/>
 
 </LinearLayout>
